# BariPort/Features/Business/Screens/ProjectList/ProjectListEntity.swift
@@ -4,12 +4,15 @@ import UIKit
 
 struct ProjectListEntity{
     struct Cell: ProjectListTableViewDataframe{
+        var url: URL
+        
         var id: String
         var projectName: String
         var companyName: String
         var comment: String
         
-        init(id: String, projectName: String, companyName: String, comment: String) {
+        init(url: URL, id: String, projectName: String, companyName: String, comment: String) {
+            self.url = url
             self.id = id
             self.projectName = projectName
             self.companyName = companyName
